# datascienceCAPES

./: README.md  csvCAPES.ipynb  filterUFMA.ipynb  pyproject.toml  rawCAPES.ipynb  rawToBronze.ipynb  toParquet.ipynb
delta/Discentes/Bibliografica/: .part-00000-c5e1e66e-5286-49a4-9b5b-243105c5ac0e-c000.snappy.parquet.crc  .part-00006-0d5e53dc-2343-4198-844e-190df7639c3f-c000.snappy.parquet.crc  part-00000-c5e1e66e-5286-49a4-9b5b-243105c5ac0e-c000.snappy.parquet  part-00006-0d5e53dc-2343-4198-844e-190df7639c3f-c000.snappy.parquet
delta/Discentes/Tecnica/: .part-00000-f5ee0964-4b31-486d-836f-08d3f8a685e8-c000.snappy.parquet.crc  .part-00007-7927f828-93a2-4a3c-93e3-c39e69556d70-c000.snappy.parquet.crc  part-00000-f5ee0964-4b31-486d-836f-08d3f8a685e8-c000.snappy.parquet  part-00007-7927f828-93a2-4a3c-93e3-c39e69556d70-c000.snappy.parquet
delta/Docentes/Bibliografica/: .part-00000-646fe213-f06b-4fb4-8cf4-754498d4a435-c000.snappy.parquet.crc  .part-00005-17e09771-eca1-4738-bb2c-3faf14073ff4-c000.snappy.parquet.crc  .part-00007-f643d050-0058-41cd-a56c-86358ef58720-c000.snappy.parquet.crc  part-00000-646fe213-f06b-4fb4-8cf4-754498d4a435-c000.snappy.parquet  part-00005-17e09771-eca1-4738-bb2c-3faf14073ff4-c000.snappy.parquet  part-00007-f643d050-0058-41cd-a56c-86358ef58720-c000.snappy.parquet
delta/Docentes/Tecnica/: .part-00000-f984dd29-2d42-4ef3-a73f-4a8b7785ef0e-c000.snappy.parquet.crc  .part-00006-7496f752-1c66-4337-9e0a-397ea9f51348-c000.snappy.parquet.crc  .part-00008-5951f923-7e8f-45c7-b437-816dca7d9869-c000.snappy.parquet.crc  (+3 more)
(+4 files in other folders)
